PR/58421: RVP: fix readdir on tmpfs. Upstream merge is complicated now because the bsd branch has not been updated in ages.