external/historical/nawk/dist/lib.c
@@ -240,6 +240,7 @@ int readrec(char **pbuf, int *pbufsize, FILE *inf, bool newflag)	/* read one rec
 		}
 		if (found)
 			setptr(patbeg, '\0');
+		isrec = found != 0 || *buf != '\0';
 	} else {
 		if ((sep = *rs) == 0) {
 			sep = '\n';
@@ -269,10 +270,10 @@ int readrec(char **pbuf, int *pbufsize, FILE *inf, bool newflag)	/* read one rec
 		if (!adjbuf(&buf, &bufsize, 1+rr-buf, recsize, &rr, "readrec 3"))
 			FATAL("input record `%.30s...' too long", buf);
 		*rr = 0;
+		isrec = c != EOF || rr != buf;
 	}
 	*pbuf = buf;
 	*pbufsize = bufsize;
-	isrec = *buf || !feof(inf);
 	   dprintf( ("readrec saw <%s>, returns %d\n", buf, isrec) );
 	return isrec;
 }
